2005-04-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/define-grob-properties.scm (all-user-grob-properties): add
	same-direction-correction

	* VERSION: release 2.5.18

2005-04-05  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/midi-stream.cc: Handle unwritable midi file.

	* Documentation/user/: Fix links.

2005-04-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/text-interface.cc (Module): rename from text-item.cc

	* input/regression/apply-output.ly (texidoc): function naming fix.

	* lily/time-signature-performer.cc (derived_mark): new function.

	* lily/lily-parser-scheme.cc:  print mapped file name for progress

	* scripts/lilypond-book.py (find_linestarts): new function.
	(find_toplevel_snippets): keep track of line numbers.

	* lily/key-performer.cc (try_music): remove FIXME warning, gobble
	all key changes.

	* ly/declarations-init.ly (partCombineListener): use
	ignoreBarChecks. Fixes: warn-partcombine-barcheck.ly

	* lily/bar-check-iterator.cc (process): ignoreBarChecks property.

2005-04-04  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/text-item.cc: Fix link.

	* Documentation/user/changing-defaults.itely (Changing defaults):
	Fix programs reference links.

	* Documentation/user/music-glossary.tely: Convert to utf-8.

2005-04-04  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* make/lilypond-vars.make: remove TEXMF from variables.
	remove DEB_BUILD pk font variables.
	remove GUILE_LOAD_PATH
	remove TeX memory vars.

2005-04-04  Werner Lemberg  <wl@gnu.org>

	* lilypond/scm-option.cc (ly_option_usage): Add final newline.

2005-04-03  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* ps/lilyponddefs.ps: remove reencode-font

	* lily/simple-spacer.cc (add_columns): also compare
	directly. Column rank doesn't distinguish between broken and
	unbroken columns. This fixes large spaces before time sig changes.

	* Documentation/user/point-and-click.itely: document ly:set-option.

	* lily/grob.cc (get_uncached_stencil): only set grob-cause if
	point_and_click_global is set.
