@@ -7,7 +7,11 @@
 
 2005-04-05  Jan Nieuwenhuizen  <janneke@gnu.org>
 
-	* lily/midi-stream.cc: Handle unwritable midi file.
+	* lily/grob.cc (mark_smob): Check pscore->layout_ before
+	dereferencing.  Fixes make web.
+
+	* lily/midi-stream.cc: Handle unwritable midi file.  Include
+	errno.h.
 
 	* Documentation/user/: Fix links.
 
